--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,12 @@
+### Database properties ###
 spring.datasource.url = jdbc:postgresql://localhost:5432/autha
 spring.datasource.username = postgres
 spring.datasource.password =
 spring.datasource.driver-class-name = org.postgresql.Driver
+
+### HikariCP Properties ###
 spring.datasource.hikari.schema = core
+spring.datasource.hikari.maximum-pool-size = 10
+
+### Jooq properties ###
+spring.jooq.sql-dialect = Postgres
