--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
-	id 'org.springframework.boot' version '2.2.3.RELEASE'
-	id 'io.spring.dependency-management' version '1.0.8.RELEASE'
+	id 'org.springframework.boot' version '2.2.6.RELEASE'
+	id 'io.spring.dependency-management' version '1.0.9.RELEASE'
 	id 'java'
 	id "org.flywaydb.flyway" version "6.1.4"
 	id 'nu.studer.jooq' version '4.0'
@@ -15,14 +15,12 @@ repositories {
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-hateoas'
 	implementation 'org.springframework.boot:spring-boot-starter-jooq'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	//implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.flywaydb:flyway-core:6.1.4'
-	implementation 'org.jooq:jooq'
-	implementation 'com.zaxxer:HikariCP:3.4.2'
 
 	runtimeOnly 'org.postgresql:postgresql'
 	jooqRuntime 'org.postgresql:postgresql:42.2.9'
@@ -30,6 +28,7 @@ dependencies {
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
+	//testImplementation 'org.springframework.security:spring-security-test'
 }
 
 test {
@@ -57,9 +56,9 @@ jooq {
 			}
 
 			generate {
-				pojos = true
+				//pojos = true
 				//daos = true
-				relations = true
+				//relations = true
 				records = true
 				//generatedAnnotation = true
 				jpaAnnotations = true
