--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,8 @@ spring.datasource.hikari.maximum-pool-size = 10
 
 ### Jooq properties ###
 spring.jooq.sql-dialect = Postgres
+
+### Application authorization policy ###
+policy.json.filePath=src/main/resources/policy/policy.json
+
+#spring.jackson.serialization.fail-on-empty-beans=false
